# property_package_surrogate_modelling

./: README.md  main.py  pytest.ini  requirements.txt  setup.cfg  solution.pickle
.github/workflows/: python-tests.yml
results/: pysmo_humid_air_props_surrogate.json
results/.temp/: plot_model_surrogate.json  pysmo_humid_air_surrogate.json  test_model_kriging_surrogate.json  test_model_poly_surrogate.json
src/: HumidAirSurrogate.py  HumidAirTest.py  __init__.py  compute_HAprops.py  humid_air_stateblock.py  train_surrogate.py
tests/: sample_humid_air_data.csv  test_compute_HAprops.py  test_humid_air_surrogate.py  test_train_surrogate.py
