[metadata]
name = surrogate-model
version = 0.1.0
author = ChatGPT
description = Surrogate modeling utilities for PySMO + IDAES
long_description = file: README.md
long_description_content_type = text/markdown
; license = MIT
classifiers =
    Programming Language :: Python :: 3.11

[options]
package_dir =
    =src
packages = find:
install_requires =
    pandas
    numpy
    matplotlib
    idaes-pse
    coolprop

[options.packages.find]
where = src
